@@ -9,11 +9,13 @@ import uk.go.hm.icb.dto.ICBMatch;
 import uk.go.hm.icb.dto.ICBMultiMatch;
 import uk.go.hm.icb.dto.ICBRequest;
 import uk.go.hm.icb.dto.ICBResponse;
+import uk.go.hm.icb.dto.SearchBioDetails;
 import uk.go.hm.icb.dto.SearchIDType;
 import uk.go.hm.icb.dto.SearchIdentifiers;
 import uk.go.hm.icb.dto.SearchSource;
 import uk.go.hm.icb.service.SearchStrategy;
 
+import java.time.LocalDate;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
@@ -44,14 +46,15 @@ public class DVLAService implements SearchStrategy {
                 .stream().filter(t -> SearchIDType.DRIVER_LICENSE == t.getIdType()).filter(t -> StringUtils.hasText(t.getIdValue()))
                 .findFirst();
         List<DrivingLicenceRecord> dvlaRecords = recordLoader.getRecords();
-        List<DrivingLicenceRecord> list;
+        List<DrivingLicenceRecord> list = List.of();
         if (searchDLIdentifiers.isPresent()) {
             list = dvlaRecords.stream()
                     .filter(rec -> searchDLIdentifiers
                             .map(si -> si.getIdValue().equalsIgnoreCase(rec.getDrivingLicenseNumber()))
                             .orElse(false))
                     .toList();
-        } else {
+        }
+        if (list.isEmpty()){
             list = dvlaRecords.stream()
                     .filter(rec -> Optional.ofNullable(request.getSearchBioDetails().getLastName())
                             .map(f -> f.equalsIgnoreCase(rec.getLastName())).orElse(false))
@@ -62,22 +65,29 @@ public class DVLAService implements SearchStrategy {
             responseBuilder.matchStatus("No match found");
         } else if (list.size() == 1) {
             ICBMatch.ICBMatchBuilder matchBuilder = ICBMatch.builder();
-            DrivingLicenceRecord record = list.getFirst();
-            String lastNameMatched = "NO";
-            String dvlaMatched = Optional.ofNullable(record.getDrivingLicenseNumber())
-                    .map(dl -> dl.equalsIgnoreCase(searchDLIdentifiers
-                            .map(SearchIdentifiers::getIdValue)
-                            .orElse("")))
+            DrivingLicenceRecord record = list.get(0);
+
+            String dvlaMatched = searchDLIdentifiers.map(SearchIdentifiers::getIdValue)
+                    .map(dl -> dl.equalsIgnoreCase(record.getDrivingLicenseNumber()))
+                    .map(b -> b ? "YES" : "NO").orElse("-");
+            String firstNameMatched = Optional.ofNullable(request.getSearchBioDetails()).map(SearchBioDetails::getFirstName)
+                    .filter(StringUtils::hasText)
+                    .map(mn -> mn.equalsIgnoreCase(record.getFirstName()))
+                    .map(b -> b ? "YES" : "NO").orElse("-");
+            String lastNameMatched = Optional.ofNullable(request.getSearchBioDetails()).map(SearchBioDetails::getLastName)
+                    .filter(StringUtils::hasText)
+                    .map(mn -> mn.equalsIgnoreCase(record.getLastName()))
+                    .map(b -> b ? "YES" : "NO").orElse("-");
+            String middleNameMatched = Optional.ofNullable(request.getSearchBioDetails()).map(SearchBioDetails::getMiddleName)
+                    .filter(StringUtils::hasText)
+                    .map(mn -> mn.equalsIgnoreCase(record.getMiddleName()))
+                    .map(b -> b ? "YES" : "NO").orElse("-");
+            String dobMatched = Optional.ofNullable(record.getDateOfBirth())
+                    .map(mn -> mn.isEqual(Optional.ofNullable(request.getSearchBioDetails()).map(SearchBioDetails::getDateOfBirth).orElse(LocalDate.now())))
                     .map(b -> b ? "YES" : "NO")
                     .orElse("-");
-            if (dvlaMatched.equals("NO")) {
-                lastNameMatched = Optional.ofNullable(record.getLastName())
-                        .map(mn -> mn.equalsIgnoreCase(request.getSearchBioDetails().getLastName()))
-                        .map(b -> b ? "YES" : "NO")
-                        .orElse("-");
-            }
 
-            matchBuilder.matches("No", lastNameMatched, "-", "No", "-", "-", dvlaMatched);
+            matchBuilder.matches(firstNameMatched, lastNameMatched, middleNameMatched, dobMatched, "-", "-", dvlaMatched);
             responseBuilder.matchStatus("One match found").match(matchBuilder.build());
         } else {
             responseBuilder.matchStatus("Multiple matches found")
@@ -88,6 +98,7 @@ public class DVLAService implements SearchStrategy {
                                     .middleName(rec.getMiddleName())
                                     .dateOfBirth(rec.getDateOfBirth())
                                     .address(rec.getAddress())
+                                    .drivingLicenseNumber(rec.getDrivingLicenseNumber())
                                     .build()).toList());
         }
         return responseBuilder.searchComplete(true).build();
